[package]
name = "influxdb-derive"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = [
    "Jake Goulding <jake.goulding@integer32.com>",
    "Carol (Nichols || Goulding) <carol.nichols@integer32.com>"
]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
itertools = "0.8"
quote = "1.0"
syn = "1.0"
